--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "homepage": "https://github.com/mrubenstein6192/Rubenstein_Portfolio#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemailer": "^6.2.1"
   }
 }
