--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemailer": "^6.2.1"
+    "nodemailer": "^6.2.1",
+    "prop-types": "^15.7.2",
+    "proptypes": "^1.1.0",
+    "yarn": "^1.17.3"
   }
 }
