--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.2.1",
     "prop-types": "^15.7.2",
     "proptypes": "^1.1.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "yarn": "^1.17.3"
   }
 }
