--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "dot-env": "0.0.1",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "nodemailer": "^6.2.1",
     "prop-types": "^15.7.2",
     "proptypes": "^1.1.0",
